--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -33,11 +33,11 @@ h1 {
     border-width: 1px;
     overflow: hidden;
     word-break: normal;
-    border-color: #ccc;
-    color: #333;
-    background-color: #f0f0f0;
+    border-color: #befdd1;
+    color: #850008;
+    background-color: #79dcab;
 }
 
 .tg .tg-4eph {
-    background-color: #f9f9f9
+    background-color: #fff849
 }
