--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -101,3 +101,45 @@ body{
     background-color:aquamarine;
     font: 12pt monospace;
 }
+
+.tb_join_q {
+    border-collapse:collapse;
+    width: 70%;
+}
+
+.tb_join_q th {
+    background: #004d28;
+    border: 1px solid #00331a;
+    text-align: left;
+    color: #e6fff3;
+    padding: 5px;
+    font: 16pt monospace;
+}
+
+.tb_join_q td {
+    background: #ccffe6;
+    border: 1px solid #00331a;
+    text-align: left;
+    font: 14pt monospace;
+    padding: 5px;
+}
+
+.tb_join_info {
+    width: 70%;
+    border-collapse:collapse;
+    font: 12pt monospace;
+}
+
+.tb_join_info th {
+    background: #80ffbf;
+    border: 1px solid #00331a;
+    text-align: center;
+    font-weight: bold;
+}
+
+.tb_join_info td {
+    background: #ccffe6;
+    border: 1px solid #00331a;
+    text-align: left;
+    font-weight: normal;
+}
